# imageworks

./: .gitignore  .pre-commit-config.yaml  Dockerfile.chat-proxy  Dockerfile.tf-iqa  Dockerfile.vllm  README.md  analyze_hue_lum.py  docker-compose.chat-proxy.yml  docker-compose.openwebui.yml  llava15_vicuna.jinja  models.json  mono_summary.md  nohup.out  pyproject.toml  pytest.ini  results_overlay_001.json  results_production_001.json  results_production_002.json  screencapture.png:mshield  show_model_names.py  start_vllm_server.py  zip_extract_summary.md
.github/workflows/: tests.yml
.streamlit/: config.toml  style.css
_staging/: imageworks-chat-proxy.service
configs/: chat_proxy.toml  competitions.toml  model_registry.20251002-181258.bak.json  model_registry.20251002-183935.bak.json  model_registry.20251002-193658.bak.json  model_registry.20251002-193733.bak.json  model_registry.20251002-195851.bak.json  model_registry.20251002-213206.bak.json  model_registry.20251002-213426.bak.json  model_registry.20251002-213602.bak.json  model_registry.20251002-222218.bak.json  model_registry.20251004-095141.bak.json  model_registry.20251004-100142.bak.json  model_registry.20251012-204759.bak.json  model_registry.20251012-205650.bak.json  model_registry.20251012-210006.bak.json  model_registry.20251012-211530.bak.json  model_registry.20251012-211626.bak.json  model_registry.20251012-212942.bak.json  model_registry.20251022-083807.bak.json  model_registry.20251023-171541.bak.json  model_registry.20251023-172521.bak.json  model_registry.backup.pre_split.json  model_registry.curated.20251013-102530.bak.json  model_registry.curated.json  model_registry.curated.json.pre-phase1  model_registry.discovered.20251002-214539.bak.json  model_registry.discovered.20251002-214611.bak.json  model_registry.discovered.20251002-221253.bak.json  model_registry.discovered.20251002-223242.bak.json  model_registry.discovered.20251002-223448.bak.json  model_registry.discovered.20251004-094951.bak.json  model_registry.discovered.20251004-173820.bak.json  model_registry.discovered.20251007-192221.bak.json  model_registry.discovered.20251007-210357.bak.json  model_registry.discovered.20251007-210942.bak.json  model_registry.discovered.20251007-222223.bak.json  model_registry.discovered.20251013-102530.bak.json  model_registry.discovered.20251013-102804.bak.json  model_registry.discovered.20251013-103953.bak.json  (+17 more)
configs/exiftool/: .ExifTool_config
configs/working_setups/: README.md  index.json
docs/: GUI-BACKGROUND-SERVICE.md  GUI-USER-GUIDE.md  ImageWorks-VRAM-Estimator-Developer-Edition-v2.1.md  LLM_Generation_Parameters_Guide.md:mshield  MONOCHROME_CHECKER_DECISION_TREE.md  MONOCHROME_CHECKER_DECISION_TREE_v2.md  MONOCHROME_CHECKER_DECISION_TREE_v3.md  MONOCHROME_CHECKER_LOGIC.md  PROJECT_STRUCTURE.md  Qwen3-VL-8B-abliterated-FP8-guide-UPDATED.md  Qwen3-VL-FP8-Quantisation-Performance-WSL-Guide.md  SUMMARY.md  ai-models-and-prompting.md  chat-proxy-config.md  color-narrator-reference.md  deterministic-model-serving.md  imageworks_prompt_management_plan.md  imageworks_tonal_analysis_and_prompting_guide.md  index.md  judge-vision-optimizations.md  langflow_dify_implementation.md  layered-registry.md  librechat-review.md  llm_story_style_guide (1).md  model-downloader.md  model-loader-overview.md  mono-technical.md  monochrome-overview.md  monochrome-technical.md  openwebui-setup.md  personal-tagger-architecture-overview.md  project-structure.md  tf-stage1-gpu-diagnostics.md  tf-stage1-gpu-fix-log.md  vllm-deployment-guide.md  vllm-v0.11-upgrade-plan.md
docs/analysis/: image-similarity-grounding.md
docs/architecture/: deterministic-model-serving.md  model-loader-overview.md  personal-tagger-architecture-overview.md  registry-and-proxy-architecture.md
docs/decisions/: 0001-model-naming-and-registry.md
docs/dev-env/: ide-setup-wsl-vscode.md
docs/environment/: ai-models-and-prompting.md  ide-setup-wsl-vscode.md  llm-generation-parameters.md
docs/gui/: models-page-reference.md
docs/guides/: image-similarity-checker.md  vision-history-management.md
docs/implementation/: phase-2-completion-report.md
docs/notes/: judge-vision-refactor.md
docs/personal_tagger/: model_options_discussion.md
docs/proposals/: art-preferences-curator-plan.md  art-preferences-curator.md  chat-proxy-browsing-requirements.md  gui-control-center-part1-context.md  gui-control-center-part2-technical-spec.md  gui-streamlit-caching-quickref.md  judge-booker.md  judge-vision-spec.md  model-downloader-architecture-extraction.md  openwebui-integration.md  personal-tagger-plan.md  personal-tagger.md  tagging-ideas-conversation.md  vllm-autoswitch.md  vlm-multi-backend-plan.md  (+1 more)
feature-requests/: CONVERSATION_TEMPLATE.md  image-similarity-checker-plan.md  image-similarity-checker.md  judge-booker-plan.md  personal tagging model choices and options.md
models/: README.md
outputs/: test_summary.md  test_summary_combined.md  test_summary_final.md  test_summary_simplified.md
scripts/: README.md  download_judge_iqa_models.py  fp8_quantize.py  generate_comprehensive_models_page.py  generate_models_page.py  import_ollama_models.py  launch_gui.sh  pull_tf_stage1.sh  regenerate_summary.py  remove_monopy_keyword.sh  start_chat_proxy.sh  start_gguf_server.py  start_gui_bg.sh  start_lmdeploy_server.py  start_personal_tagger_backends.py  start_tf_iqa_service.sh  start_vllm_server.py  status_gui.sh  stop_gui_bg.sh  stop_tf_iqa_service.sh
stutemp/: chat_template.json  qwen_template.jinja
test_color_narrator/: README.md  mock_vllm_server.py
tests/: README.md  conftest.py  test_api.py  test_backend_filter_and_undeprecate.py  test_backfill_ollama_paths.py  test_deprecated_filtering.py  test_downloader_template_promotion.py  test_env.py  test_family_override.py  test_import_ollama_models.py  test_import_skipped.py  test_include_logical_listing.py  test_logging_utils.py  test_model_loader_doc.py  test_mono.py  test_mono_near_cast.py  test_mono_split_and_boundaries.py  test_mono_two_peak.py  test_normalize_formats.py  test_perf_mono.py
(+354 files in other folders)
