[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imageworks"
version = "0.1.0"
dependencies = [
  "typer",
  "numpy",
  "opencv-python-headless",
  "Pillow",
  "scikit-image",
  "scipy",
  "tomli; python_version < '3.11'",
  # Color-narrator VLM dependencies
  "torch>=2.3.0",
  "requests",
  "aiohttp",
  # Image metadata dependencies
  "exifread",
  "python-xmp-toolkit; sys_platform != 'win32'",
  # Additional utilities
  "tqdm",
  "rich",
  "vllm[vision]>=0.10.2",
  "lmdeploy>=0.10.1",
  "qwen-vl-utils>=0.0.14",
  "nvidia-ml-py>=13.580.82",
]
requires-python = ">=3.9"

[project.scripts]
imageworks-mono = "imageworks.apps.mono_checker.cli.mono:app"
imageworks-api = "imageworks.apps.mono_checker.api.main:start"
imageworks-zip = "imageworks.tools.zip_extract:app"
imageworks-color-narrator = "imageworks.apps.color_narrator.cli.main:app"
imageworks-personal-tagger = "imageworks.apps.personal_tagger.cli.main:app"


[tool.rye]
managed = true
dev-dependencies = [
    "ruff==0.5.4",
    "pytest==8.2.2",
    "black==24.4.2",
    "mypy==1.10.1",
    "pre-commit==3.7.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.imageworks.mono]
# Default folder to scan when none is provided on the command line.
# Can be an absolute path or relative to the project root.
default_folder = "/mnt/d/Proper Photos/photos/ccc competition images"

# Default file extensions to look for.
default_exts = "jpg,jpeg,png,tif,tiff"

# Default path for the JSONL output file.
default_jsonl = "outputs/results/mono_results.jsonl"

# Default path for the human-readable summary file.
default_summary = "outputs/summaries/mono_summary.md"

# --- CORE THRESHOLDS ---
# Max channel diff (0-255) for a pixel to be considered neutral.
neutral_tol = 2
# Max chroma (C*) for an image to pass as neutral.
lab_neutral_chroma = 2.0
# Chroma (C*) threshold above which pixels are considered "colored" for hue stats.
lab_chroma_mask = 2.0
# Max hue standard deviation (degrees) for a clear PASS as toned.
lab_toned_pass_deg = 10.0
# Max hue standard deviation (degrees) for a PASS WITH QUERY.
lab_toned_query_deg = 14.0

# --- HARD FAIL THRESHOLDS ---
# Force a FAIL if the percentage of pixels with chroma > 4 exceeds this.
lab_fail_c4_ratio = 0.10
# Force a FAIL if the largest single cluster of pixels with chroma > 4 exceeds this.
lab_fail_c4_cluster = 0.08


# --- HEATMAP VISUALIZATION DEFAULTS ---
# Default suffix for generated heatmap images.
default_visualize_suffix = "_mono_vis"
# Overlay opacity for heatmaps.
auto_heatmap_alpha = 0.6
# JPEG quality for heatmaps.
auto_heatmap_quality = 92
# Saturation threshold for saturation/hue heatmaps.
auto_heatmap_sat_threshold = 0.06
# Chroma (C*) value that maps to maximum intensity in LAB heatmaps.
lab_chroma_clip = 8.0

# --- XMP WRITING DEFAULTS ---
# Default name for the generated ExifTool script.
default_xmp_script = "write_xmp.sh"


[tool.imageworks.color_narrator]
# VLM server configuration
vlm_backend = "lmdeploy"
vlm_base_url = "http://localhost:24001/v1"  # default LMDeploy endpoint
vlm_model = "Qwen2.5-VL-7B-AWQ"
vlm_timeout = 120
vlm_max_tokens = 300
vlm_temperature = 0.1
vlm_vllm_base_url = "http://localhost:8000/v1"
vlm_vllm_model = "Qwen2-VL-2B-Instruct"
vlm_vllm_api_key = "EMPTY"
vlm_lmdeploy_base_url = "http://localhost:24001/v1"
vlm_lmdeploy_model = "Qwen2.5-VL-7B-AWQ"
vlm_lmdeploy_api_key = "EMPTY"
vlm_lmdeploy_eager = true
vlm_triton_base_url = "http://localhost:9000/v1"
vlm_triton_model = "Qwen2-VL-2B-Instruct"

# Processing configuration
default_batch_size = 4
min_contamination_level = 0.1
require_overlays = true
max_concurrent_requests = 4

# Data paths
default_images_dir = "/mnt/d/Proper Photos/photos/ccc competition images"
default_overlays_dir = "/mnt/d/Proper Photos/photos/ccc competition images"
default_mono_jsonl = "outputs/results/mono_results.jsonl"

# Output configuration
backup_original_files = true
overwrite_existing_metadata = false
metadata_version = "1.0"

# Color analysis thresholds
chroma_threshold = 5.0
min_region_size = 100
high_chroma_threshold = 15.0

# Debug and development settings
debug_save_intermediate = false
debug_output_dir = "outputs/debug"
log_level = "INFO"

# Prompt templates
default_prompt_template = "color_narration"
validation_prompt_template = "color_validation"


[tool.imageworks.personal_tagger]
# Runtime defaults for the personal tagger CLI.
default_input_dirs = []
default_output_jsonl = "outputs/results/personal_tagger.jsonl"
default_summary_path = "outputs/summaries/personal_tagger_summary.md"
default_backend = "lmdeploy"
default_model = "Qwen2.5-VL-7B-AWQ"
default_base_url = "http://localhost:24001/v1"
default_timeout = 120
default_max_new_tokens = 512
default_temperature = 0.2
default_top_p = 0.9
default_prompt_profile = "default"
default_batch_size = 2
default_max_workers = 2
default_recursive = true
default_dry_run = false
default_backup_originals = true
default_overwrite_metadata = false
caption_model = "Qwen2.5-VL-7B-AWQ"
keyword_model = "Qwen2.5-VL-7B-AWQ"
description_model = "Qwen2.5-VL-7B-AWQ"
default_api_key = "EMPTY"
max_keywords = 15
image_extensions = [
  ".jpg",
  ".jpeg",
  ".png",
  ".tif",
  ".tiff",
  ".orf",
  ".cr2",
  ".cr3",
]
json_schema_version = "1.0"
